# ChangeLog for x11-wm/enlightenment
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*enlightenment-0.19.0 (16 Sep 2014)

  16 Sep 2014; Harold Naparst <harold@alum.mit.edu>
  +enlightenment-0.19.0.ebuild:
  Add x11-wm/enlightenment-0.19.0

*enlightenment-0.19.0_rc3 (15 Sep 2014)

  15 Sep 2014; Harold Naparst <harold@alum.mit.edu>
  +enlightenment-0.19.0_rc3.ebuild, +files/gentoo-sysactions.conf,
  +metadata.xml:
  add enlightenment-0.18.0_rc3
