@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Sep 2014; Harold Naparst <harold@alum.mit.edu> metadata.xml:
+  maintainer in metadata.xml
+
 *enlightenment-0.19.0 (16 Sep 2014)
 
   16 Sep 2014; Harold Naparst <harold@alum.mit.edu>
@@ -14,4 +17,3 @@
   +enlightenment-0.19.0_rc3.ebuild, +files/gentoo-sysactions.conf,
   +metadata.xml:
   add enlightenment-0.18.0_rc3
-
